--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 </head>
 <body>
 
+    <!-- LISTAGEM PRINCIPAL -->
+
     <section class="content"> <!-- SEÇÃO -->
         <h1><img src="./assets/img/pokedex_logo.png" alt=""></h1>
 
