--- a/pokemon-details.html
+++ b/pokemon-details.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+    <!-- LISTAGEM DETALHES POKEMONS -->
+
     <section class="pokemonDetails">
         <h1><img src="./assets/img/pokedex_logo.png" alt=""></h1>
 
